--- a/src/styles/blocks/search.css
+++ b/src/styles/blocks/search.css
@@ -4,6 +4,16 @@
 	--pagefind-ui-font: inherit;
 }
 
+/* Override Pagefind's focus-visible */
+#cactus__search .pagefind-ui__search-input:focus-visible,
+#cactus__search .pagefind-ui__search-clear:focus-visible,
+#cactus__search .pagefind-ui__filter-checkbox:focus-visible,
+#cactus__search .pagefind-ui__filter-name:focus-visible,
+#cactus__search .pagefind-ui__result-link:focus-visible,
+#search-dialog:focus-visible {
+	outline: 2px solid var(--color-accent);
+}
+
 #cactus__search {
 	--pagefind-ui-primary: var(--color-accent);
 	--pagefind-ui-text: var(--color-global-text);
@@ -22,10 +32,6 @@
 	padding: 0;
 	overflow: hidden;
 	background-color: transparent;
-}
-
-#cactus__search .pagefind-ui__search-clear:focus {
-	outline: 1px solid var(--color-accent);
 }
 
 #cactus__search .pagefind-ui__search-clear::before {
